new application persistence